Updated dates top of file

--- a/MyShuttle/INFO_TRAINING.html
+++ b/MyShuttle/INFO_TRAINING.html
@@ -5,7 +5,7 @@
 	<!--PROJECT: MyShuttle
 		Author: Erik Ulmer, Andy Zhu, Jason Reilly, Rickey Patel
 		IST 412 - Penn State Abington - FA2020
-		Due: 10/31/2020
+		Due: 12/2020
 	-->
 		
 		<title></title>
