--- a/MyShuttle/index.html
+++ b/MyShuttle/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-
 <html lang="en">
+
 <head>
 	<!--PROJECT: MyShuttle
 		Author: Erik Ulmer, Andy Zhu, Jason Reilly, Rickey Patel
@@ -32,7 +32,7 @@
 	<!--HomeNavBar JS | Dropdown Menu Bar for smaller screens-->
 	<script type="text/javascript" src="HomeNavBar.js"></script>
 		
-	</head>
+</head>
 
 <header>
 		<a href="index.html"><strong><h1> &nbsp;MyShuttle</h1></strong></a>
@@ -57,12 +57,13 @@
 			</nav>
 			
 			
-			<!--Empty, so this doesn't cause error-->
+			<!--Fare History Empty At the moment-->
 			<nav class="dropdown">
 				<button class="dropbtn">Fare History
 				
 				</button>
 				<nav class="dropdown-content">
+					<!--insert href for dropdown for Rider, & Driver Pages-->
 				
 				</nav>
 			</nav>	
@@ -90,29 +91,32 @@
 				</nav>
 			</nav>	
 			
+
 			<!--JS function call for hamburger icon menu-->
 			<a href="javascript:void(0);" class="icon" onclick="navBarFunction()">&#9776;</a>
 
 		</nav>
+
+<!--___________________________________________Menu Bar Code Ends Here__________________________________________________________________________-->>
 </header>
 
 
+
 <body>	
-
-<br></br>
-<br></br>
-<br></br>
-
-<br></br>
-<br></br>
-<br></br>
-
-<!--MUST KEEP THESE BREAKS OR FOOTER OVERLAPS.. ONLY ON HOMEPAGE-->
+	<br></br>
+	<br></br>
+	
+	<!--Google Map-->
+	<center><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3051.2125547998226!2d-75.112814584752!3d40.11526637940125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6b055aa880c67%3A0xdddc30c9cdaf01d7!2sPenn%20
+	State%20Abington!5e0!3m2!1sen!2sus!4v1604702523459!5m2!1sen!2sus" width="95%" height="500px" style="position: relative;"></iframe></center>
 
 
-<br></br>
-<br></br>
-<br></br>
+	<!--MUST KEEP THESE BREAKS OR FOOTER OVERLAPS.. ONLY ON HOMEPAGE-->
+	<br></br>
+	<br></br>
+	<br></br>
+</body>
+
 
 <footer>
 	<center>
