added powered with javascript at bottom of each page

--- a/MyShuttle/FAQs.html
+++ b/MyShuttle/FAQs.html
@@ -116,7 +116,7 @@
 				<hr color="#333">
 				Unauthorized use is prohibited. © 2020 Erik Ulmer, Andy Zhu, Jason Reilly, Rickey Patel. All Rights Reserved.
 				<hr color="#333">
-				Powered by HTML | CSS 
+				Powered by HTML | CSS | JavaScript
 			</center>
 	</footer>
 </html>
