--- a/MyShuttle/index.html
+++ b/MyShuttle/index.html
@@ -104,15 +104,14 @@
 
 <body>	
 	<br></br>
-	<br></br>
 	
 	<!--Google Map-->
 	<center><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3051.2125547998226!2d-75.112814584752!3d40.11526637940125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6b055aa880c67%3A0xdddc30c9cdaf01d7!2sPenn%20
-	State%20Abington!5e0!3m2!1sen!2sus!4v1604702523459!5m2!1sen!2sus" width="95%" height="500px" style="position: relative;"></iframe></center>
+	State%20Abington!5e0!3m2!1sen!2sus!4v1604702523459!5m2!1sen!2sus" width="95%" height="500px" style="position: relative; border-color: black; border-width: 10%;"></iframe></center>
 
 
 	<!--MUST KEEP THESE BREAKS OR FOOTER OVERLAPS.. ONLY ON HOMEPAGE-->
-	<br></br>
+	
 	<br></br>
 	<br></br>
 </body>
@@ -124,7 +123,7 @@
 		<hr color="#333">
 		Unauthorized use is prohibited. © 2020 Erik Ulmer, Andy Zhu, Jason Reilly, Rickey Patel. All Rights Reserved.
 		<hr color="#333">
-		Powered by HTML | CSS 
+		Powered by HTML | CSS | JavaScript
 	</center>
 </footer>
 </html> 
