--- a/MyShuttle/index.html
+++ b/MyShuttle/index.html
@@ -42,14 +42,11 @@
 			<a href="index.html" title="Back To Home" class="active"><i class="fa fa-home" style="font-size:16px"></i> Home</a>
 			
 			<nav class="dropdown">
-				<button class="dropbtn">Upload
+				<button class="dropbtn">MyTrips
 				&#9660;
 				</button>
 				<nav class="dropdown-content">
 					<form action="/action_page.php">
-						<label for="myfile">Select files:</label>
-						<input type="file" id="myfile" name="myfile" multiple><br><br>
-						<input type="submit">
 					</form>
 				</nav>
 			</nav>
@@ -110,9 +107,6 @@
 
 	<!--MUST KEEP THESE BREAKS OR FOOTER OVERLAPS.. ONLY ON HOMEPAGE-->
 	
-	<br></br>
-	<br></br>
-	<br></br>
 	<br></br>
 	<br></br>
 </body>
