table demo for myshuttle

--- a/MyShuttle/requestShuttle.html
+++ b/MyShuttle/requestShuttle.html
@@ -87,23 +87,56 @@
 <!--___________________________________________Menu Bar Code Ends Here__________________________________________________________________________-->>
 </header>
 
+<html>
+<head>
+<style>
+table, th, td {
+  border: 1px solid skyblue;
+}
+th, td {
+  padding: 5px;
+}
+th {
+  text-align: left;
+}
+</style>
+</head>
 
+<body>
+    <h2>MyShuttle</h2>
 
-<body>	
-	<br></br>
+    <table style="width:100%">
+        <tr>
+          <th>Start</th>
+          <th>End</th> 
+          <th>Total</th>
+        </tr>
+        <tr>
+          <td>MyCampus</td>
+          <td>Wawa</td>
+          <td>$5</td>
+        </tr>
+        <tr>
+          <td>MyCampus</td>
+          <td>Abington Hospital</td>
+          <td>$3</td>
+        </tr>
+        <tr>
+          <td>MyCampus</td>
+          <td>Whole Foods</td>
+          <td>$10</td>
+        </tr>
+      </table>
 	
-	<!--Google Map-->
-	<center><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3051.2125547998226!2d-75.112814584752!3d40.11526637940125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6b055aa880c67%3A0xdddc30c9cdaf01d7!2sPenn%20
-	State%20Abington!5e0!3m2!1sen!2sus!4v1604702523459!5m2!1sen!2sus" width="95%" height="500px" style="position: relative; border-color: black; border-width: 10%;"></iframe></center>
-
+	
 
 	<!--MUST KEEP THESE BREAKS OR FOOTER OVERLAPS.. ONLY ON HOMEPAGE-->
 	
-		<br></br>
-		<br></br>
-		<br></br>
-		<br></br>
-		<br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
 </body>
 
 
