Fixed arrow bug in menu bar

--- a/MyShuttle/index.html
+++ b/MyShuttle/index.html
@@ -47,7 +47,7 @@
 			<!--Fare History Empty At the moment-->
 			<nav class="dropdown">
 				<button class="dropbtn">Fare History
-				
+
 				</button>
 				<nav class="dropdown-content">
 					<!--insert href for dropdown for Rider, & Driver Pages-->
@@ -72,9 +72,8 @@
 				&#9660;
 				</button>
 				<nav class="dropdown-content">
-					<a href="INFO_TRAINING.html"><center>Info / Training</center></a>
-					<a href="FAQs.html"><center>FAQs</center></a>
-	
+					<a href="INFO_TRAINING.html">Info / Training</a>
+					<a href="FAQs.html">FAQs</a>
 				</nav>
 			</nav>	
 			
@@ -84,7 +83,7 @@
 
 		</nav>
 
-<!--___________________________________________Menu Bar Code Ends Here__________________________________________________________________________-->>
+<!--___________________________________________Menu Bar Code Ends Here__________________________________________________________________________-->
 </header>
 
 
