added 1 more column for time

--- a/MyShuttle/requestShuttle.html
+++ b/MyShuttle/requestShuttle.html
@@ -110,21 +110,25 @@ th {
           <th>Start</th>
           <th>End</th> 
           <th>Total</th>
+          <th>Duration</th>
         </tr>
         <tr>
           <td>MyCampus</td>
           <td>Wawa</td>
           <td>$5</td>
+          <td>4 minutes</td>
         </tr>
         <tr>
           <td>MyCampus</td>
           <td>Abington Hospital</td>
           <td>$3</td>
+          <td>2 minutes</td>
         </tr>
         <tr>
           <td>MyCampus</td>
           <td>Whole Foods</td>
           <td>$10</td>
+          <td>7 minutes</td>
         </tr>
       </table>
 	
