--- a/MyShuttle/requestShuttle.html
+++ b/MyShuttle/requestShuttle.html
@@ -107,24 +107,28 @@ th {
 
     <table style="width:100%">
         <tr>
+          <th>Trip#</th>
           <th>Start</th>
           <th>End</th> 
           <th>Total</th>
           <th>Duration</th>
         </tr>
         <tr>
+          <td>1)</td>
           <td>MyCampus</td>
           <td>Wawa</td>
           <td>$5</td>
           <td>4 minutes</td>
         </tr>
         <tr>
+          <td>2)</td>
           <td>MyCampus</td>
           <td>Abington Hospital</td>
           <td>$3</td>
           <td>2 minutes</td>
         </tr>
         <tr>
+          <td>3)</td>
           <td>MyCampus</td>
           <td>Whole Foods</td>
           <td>$10</td>
