minor table changes

--- a/MyShuttle/requestShuttle.html
+++ b/MyShuttle/requestShuttle.html
@@ -133,7 +133,28 @@ th {
           <td>Whole Foods</td>
           <td>$10</td>
           <td>7 minutes</td>
-        </tr>
+		</tr>
+		<tr>
+			<td>4)</td>
+			<td>MyCampus</td>
+			<td>Kung Fu Tea</td>
+			<td>$2</td>
+			<td>3 minutes</td>
+		  </tr>
+		  <tr>
+			<td>5)</td>
+			<td>MyCampus</td>
+			<td>Dorms</td>
+			<td>$1</td>
+			<td>3 minutes</td>
+		  </tr>
+		  <tr>
+			<td>6)</td>
+			<td>MyCampus</td>
+			<td>Abington Library</td>
+			<td>$1</td>
+			<td>3 minutes</td>
+		</tr>
       </table>
 	
 	
