--- a/MyShuttle/requestShuttle.html
+++ b/MyShuttle/requestShuttle.html
@@ -142,14 +142,14 @@ th {
 			<td>3 minutes</td>
 		  </tr>
 		  <tr>
-			<td>5)</td>
+			<td>5) **SPECIAL** </td>
 			<td>MyCampus</td>
 			<td>Dorms</td>
 			<td>$1</td>
 			<td>3 minutes</td>
 		  </tr>
 		  <tr>
-			<td>6)</td>
+			<td>6) **SPECIAL** </td>
 			<td>MyCampus</td>
 			<td>Abington Library</td>
 			<td>$1</td>
