--- a/MyShuttle/requestShuttle.html
+++ b/MyShuttle/requestShuttle.html
@@ -111,28 +111,36 @@ th {
           <th>Start</th>
           <th>End</th> 
           <th>Total</th>
-          <th>Duration</th>
+		  <th>Duration</th>
+		  <th>Round-Trip</th>
+		  <th>Round-Trip(Total)</th>
         </tr>
         <tr>
           <td>1)</td>
           <td>MyCampus</td>
           <td>Wawa</td>
           <td>$5</td>
-          <td>4 minutes</td>
+		  <td>4 minutes</td>
+		  <td>10 minutes</td>
+		  <td>$11</td>
         </tr>
         <tr>
           <td>2)</td>
           <td>MyCampus</td>
           <td>Abington Hospital</td>
           <td>$3</td>
-          <td>2 minutes</td>
+		  <td>2 minutes</td>
+		  <td>4 minutes</td>
+		  <td>$7</td>
         </tr>
         <tr>
           <td>3)</td>
           <td>MyCampus</td>
           <td>Whole Foods</td>
           <td>$10</td>
-          <td>7 minutes</td>
+		  <td>7 minutes</td>
+		  <td>14 minutes</td>
+		  <td>$16</td>
 		</tr>
 		<tr>
 			<td>4)</td>
@@ -140,6 +148,9 @@ th {
 			<td>Kung Fu Tea</td>
 			<td>$2</td>
 			<td>3 minutes</td>
+			<td>6 minutes</td>
+			<td>$5</td>
+			
 		  </tr>
 		  <tr>
 			<td>5) **SPECIAL** </td>
@@ -147,6 +158,8 @@ th {
 			<td>Dorms</td>
 			<td>$1</td>
 			<td>3 minutes</td>
+			<td>7 minutes</td>
+			<td>$1</td>
 		  </tr>
 		  <tr>
 			<td>6) **SPECIAL** </td>
@@ -154,6 +167,8 @@ th {
 			<td>Abington Library</td>
 			<td>$1</td>
 			<td>3 minutes</td>
+			<td>7 minutes</td>
+			<td>$1</td>
 		</tr>
       </table>
 	
