--- a/MyShuttle/index.html
+++ b/MyShuttle/index.html
@@ -46,7 +46,7 @@
 			
 			<nav class="dropdown">
 				<!--https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_popup_form-->
-				<button class="dropbtn" onclick="openForm()">Login/Signup &#9660; </button>
+				<button class="dropbtn" onclick="openForm()">Login/Signup </button>
 
 				<nav class="form-popup" id="myForm">
 					<form action="/action_page.php" class="form-container">
@@ -104,7 +104,7 @@
 				&#9660;
 				</button>
 				<nav class="dropdown-content">
-					<a href="INFO_TRAINING.html">Info / Training</a>
+					<a href="INFO_TRAINING.html">Info/Training</a>
 					<a href="FAQs.html">FAQs</a>
 				</nav>
 			</nav>	
