--- a/MyShuttle/requestShuttle.html
+++ b/MyShuttle/requestShuttle.html
@@ -84,7 +84,7 @@
 
 		</nav>
 
-<!--___________________________________________Menu Bar Code Ends Here__________________________________________________________________________-->>
+<!--___________________________________________Menu Bar Code Ends Here__________________________________________________________________________-->
 </header>
 
 <html>
@@ -180,7 +180,9 @@ th {
     <br></br>
     <br></br>
     <br></br>
-    <br></br>
+	<br></br>
+	<br></br>
+	<br></br>
 </body>
 
 
