Updated Login Fourm. Moved some code around.

--- a/MyShuttle/index.html
+++ b/MyShuttle/index.html
@@ -30,8 +30,20 @@
 	
 	<!--HomeNavBar JS | Dropdown Menu Bar for smaller screens-->
 	<script type="text/javascript" src="HomeNavBar.js"></script>
+
+	<!--Login Fourm JS | From Nav Bar-->
+	<script>
+		function openForm() {
+			document.getElementById("myForm").style.display="block";
+		}
+
+		function closeForm() {
+			document.getElementById("myForm").style.display="none";
+		}
+	</script>
 		
 </head>
+
 
 <header>
 		<a href="index.html"><strong><h1> &nbsp;MyShuttle</h1></strong></a>
@@ -44,39 +56,8 @@
 
 			<a href="requestShuttle.html"><i style="font-size:16px"></i> Request Shuttle</a>
 			
-			<nav class="dropdown">
-				<!--https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_popup_form-->
-				<button class="dropbtn" onclick="openForm()">Login/Signup </button>
 
-				<nav class="form-popup" id="myForm">
-					<form action="/action_page.php" class="form-container">
-						<h1>Login</h1>
-
-						<label for="email"><b>Email</b></label>
-						<input type="text" placeholder="Enter Email" name="email" required>
-
-						<label for="psw"><b>Password</b></label>
-						<input type=password placeholder="Enter Password" name="psw" required>
-						
-						<button type="submit" class="btn">Login</button>
-						<button type="button" class="btn">Sign Up</button>
-						<button type="button" class="btn cancel" onclick="closeForm()">Close</button>
-					</form>
-				</nav>
-			</nav>
-			
-			<script>
-				function openForm() {
-					document.getElementById("myForm").style.display="block";
-				}
-
-				function closeForm() {
-					document.getElementById("myForm").style.display="none";
-				}
-			</script>
-			
-			
-			<!--Empty, so this doesn't cause error-->
+			<!--Empty at the moment-->
 			<nav class="dropdown">
 				<button class="dropbtn">Fare History
 
@@ -108,13 +89,35 @@
 					<a href="FAQs.html">FAQs</a>
 				</nav>
 			</nav>	
+
+
+			<nav class="dropdown">
+				<!--https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_popup_form-->
+				<button class="dropbtn" onclick="openForm()">Login/Signup </button>
+
+				<nav class="form-popup" id="myForm">
+					<form action="/action_page.php" class="form-container">
+						<h2 style="color:black; "><b>Welcome!</b></h2>
+
+						<label for="email"><b> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email</b></label>
+						<input type="text" placeholder="Enter Email" name="email" required>
+
+						<label for="psw"><b>Password</b></label>
+						<input type=password placeholder="Enter Password" name="psw" required>
+						
+						<button type="submit" class="btn">Login</button>
+						<button type="button" class="btn">Sign Up</button>
+						<button type="button" class="btn cancel" onclick="closeForm()">Close</button>
+					</form>
+				</nav>
+			</nav>
 			
+
 
 			<!--JS function call for hamburger icon menu-->
 			<a href="javascript:void(0);" class="icon" onclick="navBarFunction()">&#9776;</a>
 
 		</nav>
-
 <!--___________________________________________Menu Bar Code Ends Here__________________________________________________________________________-->
 </header>
 
