--- a/MyShuttle/FAQs.html
+++ b/MyShuttle/FAQs.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
+<html lang="en>"
+
 <!--DO NOT EDIT_____________________DO NOT EDIT____________________________________DO NOT EDIT_________________DO NOT PUT MAP INFO___________________________________________-->
-<html>
 	<head>
 	<!--PROJECT: MyShuttle
 		Author: Erik Ulmer, Andy Zhu, Jason Reilly, Rickey Patel
@@ -22,9 +23,21 @@
 		<link href="HomeNavBar.css" rel="stylesheet" type="text/css"/>
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 		<link href="HomeStyle.css" rel="stylesheet" type="text/css"/>
+		<link href="Form.css" rel="stylesheet" type="text/css"/>
 		
 		<!--HomeNavBar JS | Dropdown Menu Bar for smaller screens-->
 		<script type="text/javascript" src="HomeNavBar.js"></script>
+
+		<!--Login Form JS | From Nav Bar-->
+		<script>
+			function openForm() {
+				document.getElementById("myForm").style.display="block";
+			}
+	
+			function closeForm() {
+				document.getElementById("myForm").style.display="none";
+			}
+		</script>
 		
 	</head>
 	
@@ -59,24 +72,56 @@
 				&#9660;
 				</button>
 				<nav class="dropdown-content">
-					<a href="INFO_TRAINING.html">Info / Training</a>
+					<a href="INFO_TRAINING.html">Info/Training</a>
 					<a href="FAQs.html">FAQs</a>
 				</nav>
-			</nav>	
+			</nav>
+
+			<!--Login Page-->
+			<nav class="dropdown">
+				<!--https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_popup_form-->
+				<button class="dropbtn" onclick="openForm(); openNav()">Login/Signup </button>
+
+				<nav class="form-popup" id="myForm">
+					<div id="myNav" class="overlay">
+						<div class="overlay-content">
+							<form action="login.php" method="POST" class="form-container">
+								<h2 style="color:black"><b>Welcome!</b></h2>
+
+								<label for="email"><b> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email</b></label>
+								<input type="text" placeholder="Enter Email" id="username" name="email" required>
+
+								<label for="psw"><b>Password</b></label>
+								<input type="password" placeholder="Enter Password" id="password" name="password" required>
+								
+								<input type="submit" class="btn" name="Login" value="Login"></input>
+								<input type="button" class="btn" name="Signup" value="Sign Up"></input>
+								<button type="button" class="btn cancel" onclick="closeForm(); closeNav()">Close</button>
+							</form>
+						</div>
+					</div>	
+				</nav>
+			</nav>
+			
+			<script>
+				function openNav() {
+					document.getElementById("myNav").style.display = "block";
+				}
+
+				function closeNav() {
+					document.getElementById("myNav").style.display = "none";
+				}
+			</script>
 			
 			<!--JS function call for hamburger icon menu-->
 			<a href="javascript:void(0);" class="icon" onclick="navBarFunction()">&#9776;</a>
 		</nav>
 	</header>
 	
-	
-	
-	<body>
 		
 <!--END MENU WORK HERE___________END MENU WORK HERE_____________[ALL ABOVE MENU CODE MUST BE IN "FINAL" HEADER]______________END MENU WORK HERE_______________END MENU WORK HERE____-->
 <!--END MENU WORK HERE______________DO NOT PUT MAP CODE BELOW__________________________________PAGE INFO BELOW________________________________DO NOT PUT MAP CODE BELOW_____________-->
-<html>
-<head>
+
 <style>
 div.a {
 	text-align: center;
@@ -86,7 +131,7 @@ div.a {
 	text-align: left;
   }
 </style>
-</head>
+
 <body>
 		<div class="a">
 		<h2>Frequently Asked Questions</h2>
