--- a/MyShuttle/INFO_TRAINING.html
+++ b/MyShuttle/INFO_TRAINING.html
@@ -68,8 +68,9 @@
 				&#9660;
 				</button>
 				<nav class="dropdown-content">
-					<a href="INFO_TRAINING.html">Info / Training</a>
+					<a href="INFO_TRAINING.html">Site Info</a>
 					<a href="FAQs.html">FAQs</a>
+					<a href="about.html">About Us</a>
 				</nav>
 			</nav>	
 			
