--- a/MyShuttle/fare_history.html
+++ b/MyShuttle/fare_history.html
@@ -74,8 +74,9 @@
 				&#9660;
 				</button>
 				<nav class="dropdown-content">
-					<a href="INFO_TRAINING.html"><center>Info / Training</center></a>
-					<a href="FAQs.html"><center>FAQs</center></a>
+					<a href="INFO_TRAINING.html">Site Info</a>
+					<a href="FAQs.html">FAQs</a>
+					<a href="about.html">About Us</a>
 	
 				</nav>
 			</nav>	
