Added content to Info.FAQ

--- a/MyShuttle/INFO_TRAINING.html
+++ b/MyShuttle/INFO_TRAINING.html
@@ -114,6 +114,19 @@
 			<!--JS function call for hamburger icon menu-->
 			<a href="javascript:void(0);" class="icon" onclick="navBarFunction()">&#9776;</a>
 		</nav>
+	<style>
+		p {
+			text-align: center;
+			color: white;
+		}
+		
+		h2 {
+			text-align: center;
+			color: white;
+			font-weight: bold;
+		}
+  
+</style>
 	</header>
 	
 	
@@ -124,11 +137,18 @@
 		
 		<h2>MyShuttle</h2>
 
-		<br></br>
-		<br></br>
-		<br></br>
-		<br></br>
-		<br></br> 
+		<p>MyShuttle was founded in 2020 as a service for college students.</p>
+		<p>The purpose of MyShuttle is to provide travelers with comfortable and affordable transportation. Our most popular trips are centered around Penn State Abington,
+			although users can use MyShuttle for alternative pickup/dropoff destinations.</p>
+		<p>In order to use our site please create an account with a valid email. From there users will be able to "Request Shuttles" in order to travel.</p>
+		<p>When a user requests a shuttle they must enter their pickup location and a dropoff location in order to calculate an efficient route.</p>
+		<p>MyShuttle conducts background checks on all of our drivers to ensure a safe and reliable trip for our users.</p> 
+		<p>A fare is calculated by the total distance as well as any necessary tolls.</p>
+		<p>If you are having issues requesting a MyShuttle ensure that you are logged in and using a valid form of payment.</p>
+		<p>If there are issues with the map loading double check your browser settings to allow map to load.</p>
+		<p>Users are encouraged to rate their MyShuttle using Contact Us in order to improve future traveling expeirences.</p>
+		<p>Users also have the option to view their previous MyShuttle fares to keep track of where they are going.</p>
+		<p>If you have any further questions please view our FAQ or contact us directly with any concerns.</p>
 		
 	</body>
 	
