--- a/MyShuttle/about.html
+++ b/MyShuttle/about.html
@@ -123,10 +123,13 @@
 		<br></br>
 
 		
-		<h2>MyShuttle</h2>
+        <b><h2>About My Shuttle</h2></b>
 
-		<br></br>
-		<br></br>
+        <br></br>
+        <p>My shuttle is your convienient ride app.</p>
+        <br></br>
+        <p>Designed and Developed by Erik Ulmer, Andy Zhu, Jason Reilly, Rickey Patel.</p>
+		
 		<br></br>
 		<br></br>
 		<br></br> 
