--- a/MyShuttle/FAQs.html
+++ b/MyShuttle/FAQs.html
@@ -71,8 +71,9 @@
 				&#9660;
 				</button>
 				<nav class="dropdown-content">
-					<a href="INFO_TRAINING.html">Info/Training</a>
+					<a href="INFO_TRAINING.html">Site Info</a>
 					<a href="FAQs.html">FAQs</a>
+					<a href="about.html">About Us</a>
 				</nav>
 			</nav>
 
