CSS changes to FAQ and Info

--- a/MyShuttle/FAQs.html
+++ b/MyShuttle/FAQs.html
@@ -143,29 +143,39 @@
 		</div>
 		<br></br>
 		
-		<p> ** Question 1: What forms of payment can I use with MyShuttle service?</p>
+		<p> ** What forms of payment can I use with MyShuttle service?</p>
 
-		<p> ** Answer 1: MyShuttle App accepts Apple Pay, Google Pay, PayPal, credit and debit cards, cash, and MasterCard or Visa branded commuter benefit cards.</p>
+		<p> ** MyShuttle App accepts Apple Pay, Google Pay, PayPal, credit and debit cards, cash, and MasterCard or Visa branded commuter benefit cards.</p>
 		
-		<p> ** Question 2: How can I  request a ride?</p>
+		<br></br>
 		
-		<p> ** Answer 2: You may request an app by going to our website or by downloading the application in your phone. You can choose your starting destination and select a nearby driver that is displayed in the map closest to you.</p>
+		<p> ** How can I  request a ride?</p>
+		
+		<p> ** You may request an app by going to our website or by downloading the application in your phone. You can choose your starting destination and select a nearby driver that is displayed in the map closest to you.</p>
+		
+		<br></br>
 
-		<p> ** Question 3: What is cancellation fee?</p>
+		<p> ** What is cancellation fee?</p>
 
-		<p> ** Answer 3: We appreciate the partners’ time and, thus, we always compensate the time spent on the road to the passenger if the trip never took place.</p>
+		<p> ** We appreciate the partners’ time and, thus, we always compensate the time spent on the road to the passenger if the trip never took place.</p>
+		
+		<br></br>
 
-		<p> ** Question 4: Am I able to use MyShuttle application to ride with my pet?</p>
+		<p> ** Am I able to use MyShuttle application to ride with my pet?</p>
 		
-		<p> ** Answer 4: Yes, you may travel with your pets using our service.</p>
+		<p> ** Yes, you may travel with your pets using our service.</p>
 		
-		<p> ** Question 5: How far are you able to travel using MyShuttle?</p>
+		<br></br>
 		
-		<p> ** Answer 5: MyShuttle accommades trips up to 200 miles.</p>
+		<p> ** How far are you able to travel using MyShuttle?</p>
 		
-		<p> ** Question 6: How many people can ride with me?</p>
+		<p> ** MyShuttle accommades trips up to 200 miles.</p>
 		
-		<p> ** Answer 6: Up to 3 other people can ride in the Shuttle although there will be added charges.</p>
+		<br></br>
+		
+		<p> ** How many people can ride with me?</p>
+		
+		<p> ** Up to 3 other people can ride in the Shuttle although there will be added charges.</p>
 		
 		
 	
