--- a/MyShuttle/about.html
+++ b/MyShuttle/about.html
@@ -122,14 +122,26 @@
 	<body>
 		<br></br>
 
-		
         <b><h2>About My Shuttle</h2></b>
 
         <br></br>
-        <p>My shuttle is your convienient ride app.</p>
         <br></br>
-        <p>Designed and Developed by Erik Ulmer, Andy Zhu, Jason Reilly, Rickey Patel.</p>
+		<br></br>
 		
+		<strong><center><p style="font-family:courier;">"My Shuttle will get you there."</p></center></strong>
+		<strong><center><p style="font-family:courier;">This My Shuttle System was Developed and Designed by Erik Ulmer, Andy Zhu, Jason Reilly, Rickey Patel.</p></center></strong>
+		
+		<center><hr style="width: 10%" color="#FFFF00"></center> 
+		<center><hr style="width: 5%" color="#FFFF00"></center>
+		
+		<strong><center><p style="font-family:courier;">Penn State University Abington | IST 412: Complex Systems</p></center></strong>
+		
+		<br></br>
+		<br></br>
+		<br></br>
+		<br></br>
+		<br></br>
+		<br></br>
 		<br></br>
 		<br></br>
 		<br></br> 
