Final About page

--- a/MyShuttle/about.html
+++ b/MyShuttle/about.html
@@ -122,23 +122,24 @@
 	<body>
 		<br></br>
 
-        <b><h2>About My Shuttle</h2></b>
+        <b><h2>About Us</h2></b>
 
         <br></br>
         <br></br>
-		<br></br>
-		
-		<strong><center><p style="font-family:courier;">"My Shuttle will get you there."</p></center></strong>
-		<strong><center><p style="font-family:courier;">This My Shuttle System was Developed and Designed by Erik Ulmer, Andy Zhu, Jason Reilly, Rickey Patel.</p></center></strong>
+        
+        <strong><center><i><p style="font-family:courier; color: antiquewhite; font-size:large;">"My Shuttle will get you there."</p></i></center></strong>
+        <strong><center><p style="font-family:courier; color: antiquewhite;">It all started with an idea, and the rest is history. My Shuttle is a platform for requesting and
+        tracking transportation services. Wether you need a quick trip to grab a coffee, or a ride home, My shuttle is there for you. We are here for you, when you need us. 
+        My shuttle rides are available around the clock, from wherever you are.</p></center></strong>
+        
+		<strong><center><p style="font-family:courier; color: antiquewhite;">This My Shuttle System was Developed and Designed by Erik Ulmer, Andy Zhu, Jason Reilly, Rickey Patel.</p></center></strong>
 		
 		<center><hr style="width: 10%" color="#FFFF00"></center> 
 		<center><hr style="width: 5%" color="#FFFF00"></center>
 		
-		<strong><center><p style="font-family:courier;">Penn State University Abington | IST 412: Complex Systems</p></center></strong>
+		<strong><center><p style="font-family:courier; color: antiquewhite;">Penn State University Abington | IST 412: Complex Systems</p></center></strong>
 		
-		<br></br>
-		<br></br>
-		<br></br>
+	
 		<br></br>
 		<br></br>
 		<br></br>
