--- a/MyShuttle/FAQs.html
+++ b/MyShuttle/FAQs.html
@@ -119,12 +119,12 @@
 	<style>
 	.a {
 		text-align: center;
-		color: white;
+		color: antiquewhite;
 	}
   
 	p {
 		text-align: left;
-		color: white;
+		color: antiquewhite;
 	}
 	h2 {
 		text-align: center;
