--- a/MyShuttle/INFO_TRAINING.html
+++ b/MyShuttle/INFO_TRAINING.html
@@ -117,13 +117,13 @@
 	<style>
 		p {
 			text-align: left;
-			color: white;
+			color: antiquewhite;
 			
 		}
 		
 		h2 {
 			text-align: center;
-			color: white;
+			color: antiquewhite;
 			font-weight: bold;
 		}
   
