Added code for png file

--- a/MyShuttle/index.html
+++ b/MyShuttle/index.html
@@ -46,7 +46,8 @@
 
 
 <header>
-		<a href="index.html"><strong><h1> &nbsp;MyShuttle</h1></strong></a>
+	<a href="index.html"><strong><h1><IMG src=".png" alt="logo" class="responsive">&nbsp;MyShuttle</h1></strong></a>
+		<!--<a href="index.html"><strong><h1> &nbsp;MyShuttle</h1></strong></a>-->
 	
 	<!--WHEN SCREEN RESIZE, topnav adapts for cleaner look-->
 		<nav class="topnav" id="myTopNav">
